--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ForkCast</string>
+    <string name="discover">Discover</string>
+    <string name="history">History</string>
+    <string name="profile">Profile</string>
+    <string name="inventories">Inventories</string>
 </resources>
