--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="history">History</string>
     <string name="profile">Profile</string>
     <string name="inventories">Inventories</string>
+    <string name="dessert">Dessert</string>
+    <string name="soup">Soup</string>
+    <string name="main_course">Main Course</string>
+    <string name="appetizer">Appetizer</string>
+    <string name="salad">Salad</string>
+    <string name="beverage">Beverage</string>
 </resources>
