Integrated listing calender selection

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="appetizer">Appetizer</string>
     <string name="salad">Salad</string>
     <string name="beverage">Beverage</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
 </resources>
