--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="beverage">Beverage</string>
     <string name="ok">Ok</string>
     <string name="cancel">Cancel</string>
+    <string name="version">version : %1$s</string>
+    <string name="forkcast">ForkCast</string>
 </resources>
