--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="weekend">Weekend</string>
     <string name="holiday">Holiday</string>
     <string name="weekday">WeekDay</string>
+    <string name="confidence">Confidence</string>
 </resources>
